--- a/static/css/me.css
+++ b/static/css/me.css
@@ -28,6 +28,15 @@ body {
 }
 
 .m-padded-tb-big {
+    padding-top: 4em !important;
+    padding-bottom: 4em !important;
+}
+
+.m-padded-top {
+    padding-top: 2em !important;
+}
+
+.m-padded-tb-big {
     padding-top: 3em !important;
     padding-bottom: 3em !important;
 }
@@ -60,6 +69,11 @@ body {
 .m-margin-tb {
     margin-top: 0.3em !important;
     margin-bottom: 0.3em !important;
+}
+
+.m-margin-tb-large {
+    margin-top: 2em !important;
+    margin-bottom: 2em !important;
 }
 
 .m-margin-bottom {
@@ -100,8 +114,13 @@ body {
 /*------text------*/
 .m-text {
     font-weight: 300 !important;
-    letter-spacing: 1px !important;
-    line-height: 1.8 !important;
+    letter-spacing: 0.8px !important;
+    line-height: 2 !important;
+}
+
+.m-text-large {
+    font-weight: 500 !important;
+    font-size: medium !important;
 }
 
 .m-text-thin {
